feat: Add password input field
This commit introduces a password input field using `TextInputLayout` and `TextInputEditText`. The field is configured with:
-   Outlined box style.
-   Password toggle for visibility.
-   Character counter with a maximum length of 10.
-   Overflow text color set to red when exceeding the limit.
-   The hint for the input field set to "Password".
-   The input type set to `textPassword` to hide the entered text.
-   New string resources "cost_of_service" and "password" added.
- Changes the root layout from `ConstraintLayout` to `LinearLayout`.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Tip Time App</string>
+    <string name="cost_of_service">Cost of Service</string>
+    <string name="password">Password</string>
 </resources>
